--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,9 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['patch-note']" [routerLinkActive]="['active']">Patch Note</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" [routerLink]="['expedition']" [routerLinkActive]="['active']">Expedition</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['database']" [routerLinkActive]="['active']">Database</a>
         </li>
