--- a/src/app/utility/utility.component.html
+++ b/src/app/utility/utility.component.html
@@ -22,6 +22,6 @@
         </tr>
     </tbody>
 </table>
-<h2>Archetypes (Outdated)</h2>
+<!-- <h2>Archetypes (Outdated)</h2>
 <a
-    href="https://docs.google.com/spreadsheets/d/1EOYxF6NTAZoGDzOOBMx-GW9h11O5jP7eOPfFXcy2sGo/edit#gid=0">https://docs.google.com/spreadsheets/d/1EOYxF6NTAZoGDzOOBMx-GW9h11O5jP7eOPfFXcy2sGo/edit#gid=0</a>
+    href="https://docs.google.com/spreadsheets/d/1EOYxF6NTAZoGDzOOBMx-GW9h11O5jP7eOPfFXcy2sGo/edit#gid=0">https://docs.google.com/spreadsheets/d/1EOYxF6NTAZoGDzOOBMx-GW9h11O5jP7eOPfFXcy2sGo/edit#gid=0</a> -->
