--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -205,7 +205,8 @@
                                 (click)="card2Clipboard(card)">📋</span></small>
                     </div>
                     <img class="card-img-top" [defaultImage]="defaultImage" [lazyLoad]="getAPIImage(card.code)"
-                        [alt]="card.code" (click)="selectCardInfo(resultIndex)">
+                        [errorImage]="getAPIImage(card.code, true)" [alt]="card.code"
+                        (click)="selectCardInfo(resultIndex)">
                     <div class="card-body">
                         <h5 class="card-title text-center">
                             {{card.name}}
@@ -236,7 +237,8 @@
                                 <div class="row">
                                     <div class="col-md-3 d-none d-md-block">
                                         <img class="card-image" [defaultImage]="defaultImage"
-                                            [lazyLoad]="getAPIImage(card.code)" [alt]="card.code" width="250px">
+                                            [lazyLoad]="getAPIImage(card.code)" [alt]="card.code" width="250px"
+                                            [errorImage]="getAPIImage(card.code, true)">
                                     </div>
                                     <div class="col-12 col-md-9">
                                         <div class="row">
