--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/scss/bootstrap";
 // Learn about this technique:
 // @link https://moderncss.dev/pure-css-smooth-scroll-back-to-top/
 
