--- a/src/app/database/database.component.scss
+++ b/src/app/database/database.component.scss
@@ -33,8 +33,12 @@ button.collapsed {
     width: 0;
     height: 0;
 
-    .btn-search {
-        margin-left: -60px
+    .btn-search-group {
+        margin-left: -60px;
+
+        small {
+            font-size: 0.65em;
+        }
     }
 }
 
